--- a/main_app/clients_project_list.html
+++ b/main_app/clients_project_list.html
@@ -1,15 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'original/../templates/main_app/base.html' %}
 {% load static %}
 {% block page_body %}
         <!-- Content Wrapper -->
         <div id="content-wrapper" class="d-flex flex-column">
             <!-- Main Content -->
             <div id="content">
-                {% include 'toolpar.html' %}
+                {% include 'main_app/toolbar.html' %}
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-2 text-gray-800">Projects</h1>
+                    <h1 class="h3 mb-2 text-gray-800">Projects subscripe with {{ user }}</h1>
                     <!-- DataTales Example -->
                     <div class="card shadow mb-4">
                         <div class="card-body">
@@ -108,7 +108,7 @@
                 <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+                    <a class="btn btn-primary" href="../templates/accounts/login.html">Logout</a>
                 </div>
             </div>
         </div>
